--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             'VarChat BI',
             'Competitor Analysis',
             'Personal Training',
-            'PTO'
+            'PTO',
+            'Weekend'
         ];
 
         const HOURS = ['09:00', '10:00', '11:00', '12:00', '14:00', '15:00', '16:00', '17:00'];
@@ -405,4 +406,5 @@
         ReactDOM.render(<TimesheetTracker />, document.getElementById('root'));
     </script>
 </body>
+
 </html>
