--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <div className="bg-white rounded-3xl shadow-sm p-8 mb-8 border border-[#f1f5f9]">
                         <div className="flex flex-col md:flex-row justify-between items-center gap-6">
                             <div>
-                                <h1 className="text-2xl font-bold text-gray-800 tracking-tight">Activity Tracker</h1>
+                                <h1 className="text-2xl font-bold text-gray-800 tracking-tight">Sales Timesheet</h1>
                                 {saveStatus && <span className="text-[#86efac] font-bold text-xs uppercase">{saveStatus}</span>}
                             </div>
                             <div className="flex gap-2 flex-wrap justify-center">
@@ -304,3 +304,4 @@
     </script>
 </body>
 </html>
+
